--- a/.github/workflows/image-pull.yaml
+++ b/.github/workflows/image-pull.yaml
@@ -15,20 +15,17 @@ jobs:
     name: Image Pull - Pre-Job
     runs-on: ubuntu-latest
     outputs:
-      any_changed: ${{ steps.changed-files.outputs.any_changed }}
+      changed-files: ${{ steps.changed-files.outputs.changed_files }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Get Changed Files
         id: changed-files
-        uses: tj-actions/changed-files@v46
+        uses: bjw-s-labs/action-changed-files@2cc35474e9d534ed0d743aa122fd142afbdaa0ad # v0.3.1
         with:
-          files: kubernetes/**
+          patterns: kubernetes/**/*
 
   extract:
     name: Image Pull - Extract Images
-    if: ${{ needs.pre-job.outputs.any_changed == 'true' }}
+    if: ${{ needs.pre-job.outputs.changed-files != '[]' }}
     needs: pre-job
     runs-on: ubuntu-latest
     strategy:
@@ -40,7 +37,7 @@ jobs:
       pull: ${{ steps.images.outputs.pull }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           ref: "${{ matrix.branches == 'default' && github.event.repository.default_branch || '' }}"
 
@@ -68,9 +65,9 @@ jobs:
 
   compare:
     name: Image Pull - Compare Images
-    if: ${{ needs.pre-job.outputs.any_changed == 'true' && needs.extract.outputs.default != needs.extract.outputs.pull }}
+    if: ${{ needs.extract.outputs.default != needs.extract.outputs.pull }}
     runs-on: ubuntu-latest
-    needs: ["pre-job", "extract"]
+    needs: extract
     outputs:
       images: ${{ steps.compare.outputs.images }}
     steps:
@@ -91,9 +88,9 @@ jobs:
 
   pull:
     name: Image Pull - Pull Images
-    if: ${{ needs.pre-job.outputs.any_changed == 'true' && needs.compare.outputs.images != '[]' }}
+    if: ${{ needs.compare.outputs.images != '[]' }}
     runs-on: home-ops-runner
-    needs: ["pre-job", "compare"]
+    needs: compare
     strategy:
       matrix:
         images: ${{ fromJSON(needs.compare.outputs.images) }}
@@ -108,7 +105,7 @@ jobs:
 
   status:
     name: Image Pull - Success
-    if: ${{ always() }}
+    if: ${{ !cancelled() }}
     needs: pull
     runs-on: ubuntu-latest
     steps:
